[project]
name = "oai-utils"
version = "0.1.0"
description = "Plenty of snippets for OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-aiplatform",
    "litellm",
    "openai-agents",
    "pydantic",
    "openai>=1.99.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
